Revision history for Perl extension Net::IDN::Encode

	- update to Unicode 10.0.0
	- Net::IDN::UTS46: remove workarounds for pre-9.0.0 test vectors; the
	  module now more closely follows the written spec
	- Net::IDN::UTS46: fix validation for some non-valid characters

2.401 2018-09-20
	- FIXES: #127056: [PATCH 1/2] Fix domain_to_ascii AllowUnassigned param
	  (report and patch by SKJM)
	- FIXES: #127057: [PATCH 2/2] Fix domain_to_unicode AllowUnassigned
	  param (report and patch by SKJM)

2.400 2017-01-01
	- update to Unicode 9.0.0
	- FIXES #119468: [PATCH] spelling fixes (reported by GREGOA)
	- possible fix for utf8 warnings under perl 5.8.x
	- changed generation of tests so that TODO is no longer required when
	  the module author's perl doesn't support the newest Unicode version
	- remove author tests
	- more spelling fixes

2.303 2016-12-10
	- FIXES: warnings when compiling lib/Net/IDN/Punycode.xs
	  (reported/patch provided by paul@c***-***.org)

2.302 2016-12-07
	- Fixes memory bug introduced by fix for #118924

2.301 2016-12-03
	- FIXES: #118924: encode_punycode heap overflow
	  (reported by Alexander Bluhm)

2.300 2015-06-17
	- update to Unicode 8.0.0

2.202 2015-04-18
	- use updated IdnaTest.txt from Unicode 7.0.0 database
	  FIXES: #96749: Fails with bleadperl
	- documentation updates, point to perl Unicode tutorials
	- tests for domain xn--zcaa.de;
	  REJECTED: #103205 for Net-IDN-Encode: conversion of domain name

2.201 2014-08-30
	- correct handling of uppercase a-labels in
	  domain_to_{ascii,unicode}
	- FIXES: #98354: Capitalized ACE prefix does not work (reported
	  by victor@*****.ru)

2.200 2014-06-21
	- Net::IDN::UTS46: update to Unicode® 7.0.0 and UTS #46 r13
	- typo and metadata fixes from dstreinbrunner

2.100 2013-12-30
	- Net::IDN::Encode: preserve case in pure-ASCII labels (bypass
	  en-/decoding) 
	  FIXES: #91059: case not preserved (reported by DMUEY)
	- Net::IDN::Encode: simplify scalar-via-blob syntax (pull req.
	  by DMUEY)