@@ -8,7 +8,7 @@ use warnings;
 
 use Carp;
 
-our $VERSION = "2.499_20180921";
+our $VERSION = "2.499_20180924";
 $VERSION = eval $VERSION;
 
 our @ISA = ('Exporter');
@@ -176,15 +176,29 @@ sub _validate_label {
   return 1;
 }
 
+# For perl versions < 5.11, there is a bug where Bc:L does not match some
+# character blocks that are not fully included in the main UnicodeData.txt file:
+#
+# 3400;<CJK Ideograph Extension A, First>;Lo;0;L;;;;;N;;;;;
+# 4DB5;<CJK Ideograph Extension A, Last>;Lo;0;L;;;;;N;;;;;
+# 4E00;<CJK Ideograph, First>;Lo;0;L;;;;;N;;;;;
+# 9FBB;<CJK Ideograph, Last>;Lo;0;L;;;;;N;;;;;
+# AC00;<Hangul Syllable, First>;Lo;0;L;;;;;N;;;;;
+# D7A3;<Hangul Syllable, Last>;Lo;0;L;;;;;N;;;;;
+# 20000;<CJK Ideograph Extension B, First>;Lo;0;L;;;;;N;;;;;
+# 2A6D6;<CJK Ideograph Extension B, Last>;Lo;0;L;;;;;N;;;;;
+#
+my $_RE_BidiClass_L 	= $] >= 5.011 ? '\p{Bc:L}' : '\p{Bc:L}\x{3400}-\x{4DB5}\x{4E00}-\x{9FBB}\x{AC00}-\x{D7A3}\x{20000}-\x{2A6D6}';
+
 sub _validate_bidi {
   my($l,%param) = @_;
   no warnings 'utf8';
 
   return 1 unless length($l); 
 
-  if( $l =~ m/^\p{Bc:L}/ ) { # LTR (left-to-right)
-    $l =~ m/[^\p{Bc:L}\p{Bc:EN}\p{Bc:ES}\p{Bc:CS}\p{Bc:ET}\p{Bc:BN}\p{Bc:ON}\p{Bc:NSM}]/ and croak 'contains characters with wrong bidi class for LTR [B5]';
-    $l =~ m/[\p{Bc:L}\p{Bc:EN}][\p{Bc:NSM}\P{Assigned}]*$/ or croak 'ends with character of wrong bidi class for LTR [B6]';
+  if( $l =~ m/^[$_RE_BidiClass_L]/o ) { # LTR (left-to-right)
+    $l =~ m/[^$_RE_BidiClass_L\p{Bc:EN}\p{Bc:ES}\p{Bc:CS}\p{Bc:ET}\p{Bc:BN}\p{Bc:ON}\p{Bc:NSM}]/o and croak 'contains characters with wrong bidi class for LTR [B5]';
+    $l =~ m/[$_RE_BidiClass_L\p{Bc:EN}][\p{Bc:NSM}\P{Assigned}]*$/o or croak 'ends with character of wrong bidi class for LTR [B6]';
     return 1;
   } 
 
@@ -198,7 +212,8 @@ sub _validate_bidi {
   croak 'starts with character of wrong bidi class [B1]';
 }
 
-# For perl versions < 5.11, we use a conrete list of characters; this is safe
+# For perl versions < 5.11, some Unicode properties such as Ccc or Joining_Type
+# are not supported. Instead, we use a conrete list of characters; this is safe
 # because the Unicode version supported by theses perl versions will not be
 # updated. For newer perl versions, we use the Unicode property (which is
 # supported from 5.11), so we will always be up-to-date with the Unicode
