@@ -4,6 +4,9 @@ Revision history for Perl extension Net::IDN::Encode
 	- Net::IDN::UTS46: remove workarounds for pre-9.0.0 test vectors; the
 	  module now more closely follows the written spec
 	- Net::IDN::UTS46: fix validation for some non-valid characters
+	- Net::IDN::UTS46: for perl 5.8.x/5.10.x, include workaround for bidi
+	  validation where some labels would incorrectly be marked as invalid
+	  [B1] because of a bug in perl's Unicode implementation
 
 2.401 2018-09-20
 	- FIXES: #127056: [PATCH 1/2] Fix domain_to_ascii AllowUnassigned param
